--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,10 @@ body {
     font-family: 'Now', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+main {
+    margin-bottom: 60px;
+}
+
 .container {
     display: grid;
     place-items: center;
