--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Now', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1, h2 {
@@ -21,6 +22,7 @@ h1, h2 {
 }
 
 h1 {
+    margin-bottom: 2rem;
     animation: textShadow 3s ease-in-out infinite;
 }
 
@@ -52,7 +54,6 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background: #222;
-    font-family: 'Now', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
 }
 
@@ -66,6 +67,8 @@ canvas {
 
 main {
     margin-bottom: 60px;
+    z-index: 20;
+    position: relative;
 }
 
 .container {
@@ -83,7 +86,6 @@ main {
     backdrop-filter: blur(10px);
     border-radius: 20px;
     overflow: hidden;
-    z-index: 10;
 }
 
 .container .card::before {
@@ -138,6 +140,7 @@ main {
 
 .form-control textarea {
     resize: none;
+    padding: 10px;
 }
 
 .form-control input.error,
@@ -199,6 +202,23 @@ footer p a {
     color: var(--green);
     font-weight: 600;
     text-decoration: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+    transition: color ease-in-out 0.3s;
+}
+
+footer p a:hover {
+    color: var(--green-opacity);
+}
+
+footer img {
+    border-radius: 50%;
+    max-width: 30px;
+    max-height: 50%;
+    object-position: center;
+    object-fit: cover;
 }
 
 .copied {
